@@ -30,6 +30,6 @@ public class Deck {
     }
 
     public Card dealCard() {
-        return cards.remove(0);
+        return cards.removeFirst();
     }
 }
